--- a/reprap-desktop-14.04/Arduino IDE.desktop
+++ b/reprap-desktop-14.04/Arduino IDE.desktop
@@ -2,9 +2,9 @@
 Version=1.0
 Type=Application
 Name=Arduino IDE
-Comment=
-Exec=arduino
-Icon=arduino
+Comment=Open-source electronics prototyping platform
+Exec=/opt/arduino-1.6.11/arduino
+Icon=arduino-arduinoide
 Path=
 Terminal=false
 StartupNotify=false
