--- a/reprap-desktop-16.04/FreeCAD.desktop
+++ b/reprap-desktop-16.04/FreeCAD.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=FreeCAD
 Comment=Feature based Parametric Modeler
 Exec=/usr/bin/freecad %F
-Icon=/usr/share/freecad/freecad.xpm
+Icon=freecad
 Path=
 Terminal=false
-StartupNotify=false
+StartupNotify=true
